# knap

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  prettier.config.json
.claude/: settings.local.json
.claude/skills/: release.md
.claude/skills/knap-design/: SKILL.md
.claude/skills/knap-release/: SKILL.md
.github/workflows/: release.yml  rust.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  RELEASING.md  ROADMAP.md  USER_STORIES.md
docs/design/components/: handlers.md  note-index.md  parser.md  protocol-handler.md  transport.md
docs/design/releases/templates/: design.md
docs/design/releases/v0.1/: design.md  plan.md
docs/design/releases/v0.10/: design.md  plan.md
docs/design/releases/v0.2/: design.md  plan.md
docs/design/templates/: plan.md
docs/design/v0.1/: design.md  plan.md
docs/design/v0.2/: design.md  plan.md
docs/design/v0.3/: design.md  plan.md
docs/design/v0.4/: design.md  plan.md
docs/design/v0.5/: design.md  plan.md
docs/design/v0.6/: design.md  plan.md
docs/design/v0.7/: design.md  plan.md
docs/design/v0.8/: design.md  plan.md
schemas/: README.md  initialization_options.json
schemas/v1/: initialization_options.json
src/: cli.rs  handlers.rs  index.rs  lib.rs  main.rs  parser.rs  server.rs  test_helpers.rs
src/index/: mod.rs  tests.rs
src/parser/: mod.rs  tests.rs
src/server/: mod.rs  tests.rs
tests/: code_actions.rs  code_lens.rs  completion.rs  definition.rs  diagnostics.rs  frontmatter_schema.rs  hover.rs  lifecycle.rs  lsp.rs  references.rs  rename.rs  symbols.rs  sync.rs  tags.rs
(+22 files in other folders)
