[package]
name = "knap"
version = "0.7.0"
edition = "2024"

[dependencies]
lsp-server  = "0.7"
lsp-types   = "0.97"
pulldown-cmark = "0.13"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
log         = "0.4"
env_logger  = "0.11"
url         = "2"
crossbeam-channel = "0.5"
